--- a/html code.HTML
+++ b/html code.HTML
@@ -1,8 +1,14 @@
 <html>
 <head>
+<title>Page Title</title>
 </head>
 <body>
-<h1>WELCOME NOTE</h1>
-<p>Welcome to our company! We're so excited to have you as part of our team </p>
+
+<h1>WELCOME NOTE
+</h1>
+<p>Welcome to our company! We're so excited to have you as part of our team</p>
+<marquee> <img src="pic_trulli.jpg" alt="Italian Trulli"width="100px" height="50
+px">
+ jose </marquee>
 </body>
 </html>
