--- a/html code.HTML
+++ b/html code.HTML
@@ -7,8 +7,8 @@
 <h1>WELCOME NOTE
 </h1>
 <p>Welcome to our company! We're so excited to have you as part of our team</p>
-<marquee> <img src="C:\Users\Jose Antony\Desktop\pic_trulli.jpg" alt="Italian Trulli"width="100px" height="50
+<marquee > <img src="C:\Users\Jose Antony\Desktop\pic_trulli.jpg" alt="Italian Trulli"width="100px" height="50
 px">
- jose </marquee>
+ </marquee>
 </body>
 </html>
